--- a/wp-content/themes/html5blank-master/style.css
+++ b/wp-content/themes/html5blank-master/style.css
@@ -140,12 +140,13 @@ body  {
 	background-image:url("./img/sponges.jpg");										/* Page background */														/* Font color */
 	padding: 150px;													/* Padding between link blocks and edge */
 	font-family: "Museo", "Helvetica Neue", sans-serif;	/* Font */
+	font-size: 18px;
 	text-shadow: rgba(0,0,0,0.6) 1px 1px 0; /* Text Shadow */
 
 }
 
 h1 {
-	background-color: white
+	background-color: black;
 
 }
 
@@ -198,7 +199,6 @@ input:focus {
 }
 /* header */
 .header {
-
 }
 /* logo */
 .logo {
@@ -209,8 +209,45 @@ input:focus {
 }
 /* nav */
 .nav {
-
+font-size: 22px;
+width: 100%;
+height: 60px;
+font-family: Tahoma, Geneva, sans-serif;
+font-weight: bold;
+text-align: center;
+background-image: url(img/nav_texture.png);	
+border-radius: 8px;
 }
+
+.nav ul {
+    height: 60px;
+    width: 100%;
+    list-style-type: none;
+    padding: 0px 0px;
+    margin: 0px;
+}
+
+.nav li { 
+	float: left; 
+	width: 25%;
+	heigth: 60px;
+	line-height: 60px;
+	padding: 0px; 
+}
+
+.nav a {
+    text-decoration: none;
+    line-height: 44px;
+    padding: 8px 8px 8px 8px;
+}
+
+.nav li:hover {
+    color: #F90;
+    background-image: url(img/nav_hover_texture.png);
+    overflow: visible;
+    border-radius: 8px;
+}
+
 /* sidebar */
 .sidebar {
 
